
- Issue #14026: In test_cmd_line_script, check that sys.argv is populated
  correctly for the various invocation approaches (Patch by Jason Yeo)

- Issue #14032: Fix incorrect variable name in test_cmd_line_script debugging
  message (Patch by Jason Yeo)

- Issue #14589: Update certificate chain for sha256.tbs-internet.com, fixing
  a test failure in test_ssl.

Build
-----

- Issue #14197: For OS X framework builds, ensure links to the shared
  library are created with the proper ABI suffix.

- Issue #14472: Update .gitignore. Patch by Matej Cepl.

- The Windows build now uses OpenSSL 1.0.0j and bzip2 1.0.6.

- Issue #14557: Fix extensions build on HP-UX. Patch by Adi Roiban.

- Issue #14437: Fix building the _io module under Cygwin.

- Issue #14387: Do not include accu.h from Python.h.

- Issue #14359: Only use O_CLOEXEC in _posixmodule.c if it is defined.
  Based on patch from Hervé Coatanhay.

- Issue #14018: Fix OS X Tcl/Tk framework checking when using OS X SDKs.

Documentation
-------------

- Issue #15230: Clearly document some of the limitations of the runpy
  module and nudge readers towards importlib when appropriate.

- Issue #13557: Clarify effect of giving two different namespaces to exec or
  execfile().

- Issue #8799: Fix and improve the threading.Condition documentation.

- Issue #14943: Correct a default argument value for winreg.OpenKey
  and correctly list the argument names in the function's explanation.

- Issue #14034: added the argparse tutorial.

- Issue #15250: Document that filecmp.dircmp compares files shallowly. Patch
  contributed by Chris Jerdonek.

Tools/Demos
-----------

- Issue #14695: Fix missing support for starred assignments in
  Tools/parser/unparse.py.


What's New in Python 3.2.3?
===========================

*Release date: 10-Apr-2012*

Build
-----

- Issue #14387: Work around a problem building extension modules under Windows
  by undefining ``small`` before use in the Python headers.

